# libcoraza

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  Doxyfile  Doxyfile.in  Makefile  Makefile.am  README.md  build.sh  configure.ac  coraza_config.c  coraza_config.h  coraza_filters.c  coraza_filters.h  coraza_utils.c  coraza_utils.h  export.go  go.mod  go.sum  mod_coraza.c  mod_coraza.h  simple_get
.github/workflows/: make-install.yml
core/: core.go  core_test.go
examples/: Makefile  apache-vhost.conf  simple_get.c
libcoraza/: coraza.go  coraza_test.go  default.conf  fs.go  log.go
libcoraza-core/: core.go  core_test.go
libcoraza-utils/: utils.go
libcoraza/testdata/: test.conf
tests/: Makefile  Makefile.am  a.out  check_result.sh  config.c  simple_get.c  simple_get.out
utils/: utils.go
